# modix

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  AGENTS.md  CI_CD_GUIDE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  go.mod  go.sum  modix  modix_product_requirements.md  modix_test  modix_test2
.beads/: issues.jsonl
.cargo/: config.toml
.claude/skills/requirements-gatherer/: skill.json  skill.md
.github/workflows/: release.yml
.modix/prompts/: 01-Higi_Level_Vision.md  02-Plan-Mode.md
.modix/workflow/: AGENTS.md  DEVELOPMENT.md
cmd/modix/: add.go  check.go  init.go  list.go  main.go  status.go  switch.go  utils.go  version.go
cmd/modix/commands/: add.go  check.go  export.go  init.go  list.go  model.go  root.go  status.go  switch.go  utils.go  vendor.go
docs/: VERSION_INJECTION_GUIDE.md  docs.json  examples.md  fsm.md  manifest.md  multi-agent-orchestration.md  rec.md  tui.md  workflow.md  供应商配置说明和操作指南.md  本地测试说明文档.md
docs/en/: changelog.mdx
docs/en/guides/: configuration.mdx  development.mdx  examples.mdx  introduction.mdx  quick-start.mdx  security.mdx  trouble-shoot.mdx
docs/en/providers/: alibaba.mdx  anthropic.mdx  bytedance.mdx  deepseek.mdx  (+5 more)
docs/images/: arch.excalidraw
docs/zh/: changelog.mdx
internal/config/: claude.go  config.go  config_test.go  default.go
internal/project/: check.go  init.go  inspect.go  validate.go
internal/tui/: app.go
internal/version/: version.go
scripts/: demo_version_injection.sh  version_injection_demo.sh
src/: config.rs  config_manager.rs  lib.rs  main.rs
version/: version.go
(+36 files in other folders)
